--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,14 +1,13 @@
 /* Controls the stylistic properties of the header */
 .header-wrapper {
-    background: #eef2f3;  /* fallback for old browsers */
+    background: #505050;  /*#eef2f3  /* fallback for old browsers */
     min-height: 25vh;
-    border: 1px solid #aaa
-
+    border: 1px solid #aaa;
+    /* background: url('../assets/Banner.jpg'); */
 }
 
 /* Controls the top group of buttons */
-.header-top-menuContainer {
-    
+.header-top-menuContainer { 
     text-align: right;
     flex-direction: row;
     margin: auto;
@@ -17,13 +16,35 @@
 /* Controls the subject group of buttons */
 .header-bottom-menuContainer {
     display: flex;
+    background: #f5f5f5;
 }
+
 
 .header-top-buttons {
 }
-
 .header-bottom-buttons {
     flex: 1;
 }
+
+.title-wrapper {
+    text-align: center;
+    border-bottom: 5px solid #505050;
+    background-color: #f5f5f5
+}
+
+.small-title-text {
+    padding: 2px;
+    margin-top: 2px;
+}
+
+.title-text {
+    border-bottom: 4px solid #505050;
+    margin-bottom: 2px;
+    padding-bottom: 8px;
+    margin-left: 2%;
+    margin-right:2%;
+}
+
+
 
 
