--- a/src/style/style.css
+++ b/src/style/style.css
@@ -72,6 +72,17 @@
     color:lavender;
 }
 
+.footer-style {
+    margin-top: 3%;
+    background-color: #5F4BB6;
+    border: 1px solid #aaa;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    height:  70px;
+    width: 100%;
+}
+
 .news-container img{
     min-width:320px;
     min-height:160px;
