some extra things I decided to change within the article components

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -101,6 +101,13 @@
 
 .right {
     text-align: right;
+    padding: 4px;
+    margin: auto;
+}
+
+.right-corner {
+    text-align: right;
+    margin: auto;
 }
 
 *{
