--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,8 +45,8 @@
 .news-container {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 2%;
+    margin-right: 2%;
     border-radius: 20px;
     padding: 1rem;
     color: whitesmoke;
