--- a/src/style/style.css
+++ b/src/style/style.css
@@ -28,6 +28,7 @@
 .title-wrapper {
     text-align: center;
     border-bottom: 1px solid #5F4BB6;
+    background: lavender;
 
 }
 
@@ -45,8 +46,8 @@
 .news-container {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
     border-radius: 20px;
     padding: 1rem;
     color: whitesmoke;
@@ -63,7 +64,8 @@
 
 .news-container h2{
     text-align:center;
-    border: 3px double whitesmoke;
+    border-top: 3px double whitesmoke;
+    border-bottom: 3px double whitesmoke;
     padding: 5px;
 }
 
@@ -72,7 +74,6 @@
 }
 
 .footer-style {
-    margin-top: 3%;
     background-color: #5F4BB6;
     border: 1px solid #aaa;
     text-align: center;
@@ -108,6 +109,10 @@
 .right-corner {
     text-align: right;
     margin: auto;
+}
+
+a{
+    text-decoration: none;
 }
 
 *{
