--- a/src/style/aboutstyle.css
+++ b/src/style/aboutstyle.css
@@ -10,7 +10,10 @@
 }
 
 .avatar-img {
-    height: 290px;
+    margin-top: 6%;
+    height: 260px;
+    border-radius: 10px;
+    border: 1px solid #2F323A;
 }
 
 .banner-text {
