--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 /* Controls the stylistic properties of the header */
 .header-wrapper {
     border: 1px solid #aaa;
